--- a/arch/arm64/boot/dts/qcom/apq8016-sbc.dtsi
+++ b/arch/arm64/boot/dts/qcom/apq8016-sbc.dtsi
@@ -199,21 +199,9 @@
                         pinctrl-1 = <&cdc_pdm_lines_sus &ext_sec_tlmm_lines_sus &ext_mclk_tlmm_lines_sus>;
                         pinctrl-names = "default", "sleep";
                         qcom,model = "DB410c";
-                        /*qcom,audio-routing =
+                        qcom,audio-routing =
                                 "AMIC1", "MIC BIAS External1",
-                                "AMIC3", "MIC BIAS Internal1";*/
-
-			qcom,audio-routing = 
-				"MIC BIAS External1", "Handset Mic",
-				"MIC BIAS Internal2", "Headset Mic",
-				"MIC BIAS External1", "Secondary Mic",
-				"AMIC1", "MIC BIAS External1",
-				"AMIC2", "MIC BIAS Internal2",
-				"AMIC3", "MIC BIAS External1",
-				"DMIC1", "MIC BIAS Internal1",
-				"MIC BIAS Internal1", "Digital Mic1",
-				"DMIC2", "MIC BIAS Internal1",
-				"MIC BIAS Internal1", "Digital Mic2";
+                                "AMIC3", "MIC BIAS Internal1";
 
                         internal-codec-playback-dai-link@0 {            /* I2S - Internal codec */
                                 link-name = "WCD";
