set regulator l11 system-load to 500000, as per Maintainer's advice

--- a/arch/arm64/boot/dts/qcom/apq8016-sbc.dtsi
+++ b/arch/arm64/boot/dts/qcom/apq8016-sbc.dtsi
@@ -454,6 +454,8 @@
 		regulator-min-microvolt = <1750000>;
 		regulator-max-microvolt = <3337000>;
 		regulator-initial-mode = <1>;
+		regulator-allow-set-load;
+		regulator-system-load = <500000>;
 	};
 
 	l12 {
