Allow set load on regulator l11

--- a/arch/arm64/boot/dts/qcom/apq8016-sbc.dtsi
+++ b/arch/arm64/boot/dts/qcom/apq8016-sbc.dtsi
@@ -455,8 +455,8 @@
 		regulator-max-microvolt = <3000000>;
 		regulator-initial-mode = <1>;
 
-		/*regulator-allow-set-load;
-		regulator-system-load = <250000>; */
+		regulator-allow-set-load;
+		regulator-system-load = <250000>;
 	};
 
 	l12 {
