--- a/arch/arm64/boot/dts/qcom/apq8016-sbc.dtsi
+++ b/arch/arm64/boot/dts/qcom/apq8016-sbc.dtsi
@@ -259,18 +259,18 @@
 				compatible = "ovti,ov5640";
 				reg = <0x78>;
 
-			enable-gpios = <&msmgpio 34 0>;
-			reset-gpios = <&msmgpio 35 1>;
-			pinctrl-names = "default";
-			pinctrl-0 = <&camera_rear_default>;
+				enable-gpios = <&msmgpio 34 GPIO_ACTIVE_HIGH>;
+				reset-gpios = <&msmgpio 35 GPIO_ACTIVE_LOW>;
+				pinctrl-names = "default";
+				pinctrl-0 = <&camera_rear_default>;
 
-			clocks = <&gcc GCC_CAMSS_MCLK0_CLK>;
-			clock-names = "xclk";
-			clock-frequency = <23880000>;
+				clocks = <&gcc GCC_CAMSS_MCLK0_CLK>;
+				clock-names = "xclk";
+				clock-frequency = <23880000>;
 
-			vdddo-supply = <&pm8916_l5>;
-			vdda-supply = <&pm8916_l10>;
-			vddd-supply = <&camera_vddd_1v5>;
+				vdddo-supply = <&pm8916_l6>;
+				vdda-supply = <&pm8916_l10>;
+				vddd-supply = <&camera_vddd_1v5>;
 
 
 				port {
