--- a/kernel/configs/distro.config
+++ b/kernel/configs/distro.config
@@ -176,7 +176,6 @@ CONFIG_CGROUP_DEVICE=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
-CONFIG_BLK_CGROUP=y
 CONFIG_DNS_RESOLVER=y
 CONFIG_EXT2_FS=y
 CONFIG_EXT2_FS_XATTR=y
@@ -196,10 +195,10 @@ CONFIG_SCHEDSTATS=y
 CONFIG_SCHED_DEBUG=y
 
 # NFS server
-CONFIG_ROOT_NFS=y
-CONFIG_NFSD=m
-CONFIG_NFSD_V3=y
-CONFIG_NFSD_V3_ACL=y
+CONFIG_ROOT_NFS=n
+CONFIG_NFSD=n
+CONFIG_NFSD_V3=n
+CONFIG_NFSD_V3_ACL=n
 
 # HID
 CONFIG_HID_APPLE=y
@@ -213,7 +212,7 @@ CONFIG_HID_MULTITOUCH=m
 
 #misc
 CONFIG_CPU_FREQ=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
@@ -322,8 +321,6 @@ CONFIG_SECCOMP=y
 CONFIG_CGROUP_PIDS=y
 CONFIG_CGROUP_NET_PRIO=y
 CONFIG_CGROUP_PERF=y
-CONFIG_BLK_CGROUP=y
-CONFIG_BLK_DEV_THROTTLING=y
 CONFIG_CFQ_GROUP_IOSCHED=y
 CONFIG_NET_SCHED=y
 CONFIG_NET_CLS_CGROUP=m
