--- a/arch/arm64/boot/dts/qcom/apq8016-sbc.dtsi
+++ b/arch/arm64/boot/dts/qcom/apq8016-sbc.dtsi
@@ -48,14 +48,16 @@
 			status = "okay";
 		};
 
+		/*XeT -- is this one*/
 		serial@78af000 {
 			label = "LS-UART0";
-			status = "disabled";
+			status = "okay";
 			pinctrl-names = "default", "sleep";
 			pinctrl-0 = <&blsp1_uart1_default>;
 			pinctrl-1 = <&blsp1_uart1_sleep>;
 		};
 
+		/*console*/
 		serial@78b0000 {
 			label = "LS-UART1";
 			status = "okay";
